running fine, now going wild with antigravity opus

--- a/apps/desktop/src-tauri/Cargo.toml
+++ b/apps/desktop/src-tauri/Cargo.toml
@@ -19,11 +19,16 @@ uuid = { workspace = true }
 chrono = { workspace = true }
 rusqlite = { workspace = true }
 tokio = { workspace = true }
+tokio-util = "0.7"
 reqwest = { workspace = true }
 futures = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
+async-stream = "0.3"
 base64 = "0.21"
 sha2 = "0.10"
 parking_lot = "0.12"
 directories = "5.0"
+
+[target.'cfg(windows)'.dependencies]
+winapi = { version = "0.3", features = ["wincon"] }
