--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "tauri": "tauri"
+    "tauri": "tauri",
+    "tauri:dev": "node scripts/tauri-dev.js"
   },
   "dependencies": {
     "react": "^18.2.0",
