--- a/apps/desktop/src-tauri/Cargo.toml
+++ b/apps/desktop/src-tauri/Cargo.toml
@@ -1,35 +1,36 @@
 [package]
 name = "glee"
-version.workspace = true
-edition.workspace = true
-license.workspace = true
+version = "0.1.0"
+edition = "2021"
+license = "MIT"
 
 [build-dependencies]
-tauri-build = { workspace = true, features = [] }
+tauri-build = { version = "2.0", features = [] }
 
 [dependencies]
-tauri = { workspace = true, features = [] }
+tauri = { version = "2.0", features = [] }
 tauri-plugin-dialog = "2.0"
 tauri-plugin-fs = "2.0"
 tauri-plugin-shell = "2.0"
-serde = { workspace = true }
-serde_json = { workspace = true }
-thiserror = { workspace = true }
-uuid = { workspace = true }
-chrono = { workspace = true }
-rusqlite = { workspace = true }
-tokio = { workspace = true }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+thiserror = "1.0"
+uuid = { version = "1.0", features = ["v4"] }
+chrono = "0.4"
+rusqlite = { version = "0.31", features = ["bundled"] }
+tokio = { version = "1.0", features = ["full"] }
 tokio-util = "0.7"
-reqwest = { workspace = true }
-futures = { workspace = true }
-tracing = { workspace = true }
-tracing-subscriber = { workspace = true }
+reqwest = { version = "0.12", features = ["json", "stream"] }
+futures = "0.3"
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 async-stream = "0.3"
 base64 = "0.21"
 sha2 = "0.10"
 parking_lot = "0.12"
 directories = "5.0"
 zip = "6.0.0"
+sqlite-vec = "0.1"
 
 [target.'cfg(windows)'.dependencies]
 winapi = { version = "0.3", features = ["wincon"] }
